[package]
name = "base64-string"
version = "1.0.0"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "Implementation of the Base64 hash made using Rust"
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/CipherDogs/base64-string"
repository = "https://github.com/CipherDogs/base64-string"
keywords = ["base64"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
